Fixed swagger annotation for budget history handler for API documentation
